# Ink

./: .gitignore  .gitmodules  CMakeLists.txt  DartConfiguration.tcl  LICENSE  README.md
examples/: CMakeLists.txt
examples/ac97_ctrl/: ac97_ctrl.cpp  ac97_ctrl.edges  ac97_ctrl_example
examples/aes_core/: aes_core.cpp  aes_core.edges  aes_core_example
examples/c17/: c17.cpp  c17.graph
examples/c17_slack/: c17_slack.cpp
examples/c3_slack/: c17.graph  c3_slack.cpp
examples/c432/: c432.cpp  c432.graph
examples/c7552/: c7552.cpp
examples/cpathgen/: big-table.cpp  big-table.sh  convert-gpathgen-benchmark-to-edge-insertions.cpp  err-vs-path-cnt.cpp  err-vs-path-cnt.sh  gen-golden.cpp  gen-golden.sh  runtime-steps-vs-delta.cpp  runtime-steps-vs-delta.sh  runtime-vs-path-cnt.cpp  runtime-vs-path-cnt.sh  speedup-acc-vs-num-threads.cpp  speedup-acc-vs-num-threads.sh  toy.cpp
examples/des_perf/: des_perf.cpp  des_perf_example
examples/exp/: exp  exp.cpp  parallel  parallel.cpp  single-iter  single-iter.cpp
examples/incremental/: inc_app  incremental.cpp
examples/mlq-pathgen/: gen-golden  gen-golden.cpp  toy  toy.cpp
examples/s27/: s27.cpp  s27.graph
examples/simple/: simple.cpp  simple.graph  simple_app  simple_timing
examples/tv80/: tv80.cpp  tv80_example
examples/vga_lcd/: vga_lcd.cpp  vga_lcd.paths
examples/wb_dma/: wb_dma.cpp  wb_dma.edges  wb_dma_example
experiment/: run-report.sh
experiment/tv80/: Ink  costs-orig
experiment/vga_lcd/: Ink
ink/: CMakeLists.txt  ink.cpp  ink.hpp  timer.hpp
inktimer/: CMakeLists.txt  inktimer.hpp
main/: CMakeLists.txt  main.cpp
regressions/: Ink-read-ops  Ink-read-ops-glob  c432.golden  c7552.golden-glob.perfstat  c7552.golden.perfstat  perfstat-tv80.sh  perfstat-vga_lcd.sh  simple.golden  simple.golden-glob  simple.golden.perfstat  tv80.golden-glob.perfstat  tv80.golden.perfstat  vga_lcd.golden-glob.perfstat  vga_lcd.golden.perfstat
tests/: has_filesystem.cc
unittests/: CMakeLists.txt  basics.cpp  basics_include-b858cb2.cmake  binary_trees.cpp  binary_trees_include-b858cb2.cmake  c17_graph.cpp  c17_graph_include-b858cb2.cmake  c3_slack_graph.cpp  c3_slack_graph_include-b858cb2.cmake  chains.cpp  chains_include-b858cb2.cmake  glob_sfxt.cpp  glob_sfxt_include-b858cb2.cmake  inc_c17_graph.cpp  inc_c3_slack_graph.cpp  inc_pfxt.cpp  inc_pfxt_include-b858cb2.cmake  inc_pfxt_v2.cpp  inc_sample_graph.cpp  inc_simp_s27_graph.cpp  sample_graph.cpp  sample_graph_include-b858cb2.cmake  simp_s27_graph.cpp  simp_s27_graph_include-b858cb2.cmake  spur_async.cpp  update_sfxt.cpp  update_sfxt_include-b858cb2.cmake  updated_or_removed_pfxt_nodes.cpp  updated_or_removed_pfxt_nodes_include-b858cb2.cmake  very_simple_graph.cpp
